src/test/error/scope2.lns
class Class1 {
    pri let list: int[];

    pub fn func() {
        foreach item in list { // error
        }
    }
}
